Add the ISE implementation as an extended ALU on the Rocket Core. And update the rtl for the twisted alz.ell instruction.

--- a/src/hardware/rtl/rv32/Makefile.in
+++ b/src/hardware/rtl/rv32/Makefile.in
@@ -15,6 +15,7 @@ endif
 RTL32 =$(REPO_HOME)/src/hardware/rtl/rv32/
 rtl32_src= \
         $(REPO_HOME)/src/hardware/rtl/rv32/cop_ise.v \
+        $(REPO_HOME)/src/hardware/rtl/rv32/xalu_ise.v \
         $(REPO_HOME)/src/hardware/rtl/rv32/rv32b_ise.v \
         $(REPO_HOME)/src/hardware/rtl/rv32/rv32ell_ise.v \
         $(REPO_HOME)/src/hardware/rtl/rv32/alzette_ise_v2.v \
