--- a/src/software/share/arch/generic/Makefile.in
+++ b/src/software/share/arch/generic/Makefile.in
@@ -4,26 +4,24 @@
 # can be found at https://opensource.org/licenses/MIT (or should be included 
 # as LICENSE.txt within the associated archive or repository).
 
-ifndef RISCV
-  $(error "set RISCV         environment variable to point at toolchain installation")
+ifndef REPO_HOME
+  $(error "execute 'source ./bin/conf.sh' to configure environment")
 endif
-ifndef RISCV_ALZETTE
-  $(error "set RISCV_ALZETTE environment variable to point at toolchain installation")
+ifndef REPO_VERSION
+  $(error "execute 'source ./bin/conf.sh' to configure environment")
 endif
 
 # =============================================================================
 
-export GCC_PREFIX = ${RISCV}/bin/riscv64-unknown-elf
+export GCC_PREFIX = 
 
-export GCC_FLAGS  = -march='rv32gc' -mabi='ilp32'
+export GCC_FLAGS  = 
 export GCC_PATHS  = 
 export GCC_LIBS   = 
 
 # -----------------------------------------------------------------------------
 
-run       : ${TARGET}.elf
-	@${RISCV_ALZETTE}/bin/spike    --isa='rv32gc' ${RISCV_ALZETTE}/riscv32-unknown-elf/bin/pk ${<}
-run-debug : ${TARGET}.elf
-	@${RISCV_ALZETTE}/bin/spike -d --isa='rv32gc' ${RISCV_ALZETTE}/riscv32-unknown-elf/bin/pk ${<}
+${TARGET}.run : ${TARGET}.elf
+	@${<} | tee > ${@}
 
 # =============================================================================
