more updates (inc. move python code into src tree, split between shared code and algorithm-specific code)

--- a/src/software/share/arch/generic/Makefile.in
+++ b/src/software/share/arch/generic/Makefile.in
@@ -21,7 +21,9 @@ export GCC_LIBS   =
 
 # -----------------------------------------------------------------------------
 
-${TARGET}.run : ${TARGET}.elf
-	@${<} | tee > ${@}
+FORCE :
+
+${TARGET}.run : ${TARGET}.elf FORCE
+	@${<} | tee ${@}
 
 # =============================================================================
