--- a/src/hardware/fpga/soc/rv32-rocket/Makefile.in
+++ b/src/hardware/fpga/soc/rv32-rocket/Makefile.in
@@ -8,8 +8,6 @@ ifndef REPO_HOME
   $(error "execute 'source ./bin/conf.sh' to configure environment")
 endif
 
-#CORE = rocket32_soc 
-
 VIVADO = cd $(FPGA_BUILD)/$(VIVADO_PROJECT) && vivado
 UPDMEM = cd $(FPGA_BUILD)/$(VIVADO_PROJECT) && updatemem
 
@@ -26,7 +24,7 @@ rocketchip_cop_ram_src =\
 rocketchip_xalu_ram_src =\
     $(ROCKETCHIP_REPO)/vsim/generated-src/$(ROCKET).$(XALU_FPGACONFIG).behav_srams.v
 
-rtl_sources = $(widecard $(FPGA_BUILD)/$(VIVADO_PROJECT)/rtl_sources/*.c)
+rtl_sources = $(widecard $(FPGA_BUILD)/$(VIVADO_PROJECT)/rtl_sources/*.v)
 
 #--------------------------------------------------------------------
 # Build Verilog
@@ -39,26 +37,28 @@ XALU_FPGACONFIG = SCARVRocketFPGAXALUConf32
 
 fpga-rocketchip-cop-verilog = $(ROCKETCHIP_REPO)/vsim/generated-src/$(ROCKET).$(COP_FPGACONFIG).v
 $(fpga-rocketchip-cop-verilog) : 
+	cp -f $(FPGA)/soc/$(SOC)/bootrom/bootrom.img             $(ROCKETCHIP_REPO)/bootrom/bootrom.img
 	$(MAKE) -C $(ROCKETCHIP_REPO)/vsim verilog MODEL=$(FPGAMODEL) CONFIG=$(COP_FPGACONFIG)
 
 fpga-rocketchip-xalu-verilog = $(ROCKETCHIP_REPO)/vsim/generated-src/$(ROCKET).$(XALU_FPGACONFIG).v
 $(fpga-rocketchip-xalu-verilog) : 
+	cp -f $(FPGA)/soc/$(SOC)/bootrom/bootrom.img             $(ROCKETCHIP_REPO)/bootrom/bootrom.img
 	$(MAKE) -C $(ROCKETCHIP_REPO)/vsim verilog MODEL=$(FPGAMODEL) CONFIG=$(XALU_FPGACONFIG)
 
-cop_verilog: $(fpga-rocketchip-cop-verilog) $(FPGA)/rocket32_soc/system_top_wrapper.v $(rtl32_cop_src) $(rtl32_ise_src)
+cop_verilog: $(fpga-rocketchip-cop-verilog) $(FPGA)/soc/$(SOC)/system_top_wrapper.v $(rtl32_cop_src) $(rtl32_ise_src)
 	mkdir -p $(FPGA_BUILD)/$(VIVADO_PROJECT)/rtl_sources
 	mkdir -p $(FPGA_BUILD)/$(VIVADO_PROJECT)/prog-bin
-	cp -f $(FPGA)/rocket32_soc/system_top_wrapper.v $(FPGA_BUILD)/$(VIVADO_PROJECT)/rtl_sources/system_top_wrapper.v
+	cp -f $(FPGA)/soc/$(SOC)/system_top_wrapper.v $(FPGA_BUILD)/$(VIVADO_PROJECT)/rtl_sources/system_top_wrapper.v
 	cp -f $(fpga-rocketchip-cop-verilog)            $(FPGA_BUILD)/$(VIVADO_PROJECT)/rtl_sources/rocketcore.v
 	cp -f $(rocketchip_cop_ram_src)                 $(FPGA_BUILD)/$(VIVADO_PROJECT)/rtl_sources/memcore.v
 	cp -f $(rocketchip_support_src)                 $(FPGA_BUILD)/$(VIVADO_PROJECT)/rtl_sources/
 	cp -f $(rtl32_cop_src)                          $(FPGA_BUILD)/$(VIVADO_PROJECT)/rtl_sources/
 	cp -f $(rtl32_ise_src)                          $(FPGA_BUILD)/$(VIVADO_PROJECT)/rtl_sources/
 
-xalu_verilog: $(fpga-rocketchip-xalu-verilog) $(FPGA)/rocket32_soc/system_top_wrapper.v $(rtl32_xalu_src) $(rtl32_ise_src)
+xalu_verilog: $(fpga-rocketchip-xalu-verilog) $(FPGA)/soc/$(SOC)/system_top_wrapper.v $(rtl32_xalu_src) $(rtl32_ise_src)
 	mkdir -p $(FPGA_BUILD)/$(VIVADO_PROJECT)/rtl_sources
 	mkdir -p $(FPGA_BUILD)/$(VIVADO_PROJECT)/prog-bin
-	cp -f $(FPGA)/rocket32_soc/system_top_wrapper.v $(FPGA_BUILD)/$(VIVADO_PROJECT)/rtl_sources/system_top_wrapper.v
+	cp -f $(FPGA)/soc/$(SOC)/system_top_wrapper.v $(FPGA_BUILD)/$(VIVADO_PROJECT)/rtl_sources/system_top_wrapper.v
 	cp -f $(fpga-rocketchip-xalu-verilog)           $(FPGA_BUILD)/$(VIVADO_PROJECT)/rtl_sources/rocketcore.v
 	cp -f $(rocketchip_xalu_ram_src)                $(FPGA_BUILD)/$(VIVADO_PROJECT)/rtl_sources/memcore.v
 	cp -f $(rocketchip_support_src)                 $(FPGA_BUILD)/$(VIVADO_PROJECT)/rtl_sources/
@@ -78,23 +78,24 @@ default: vivado_project_file
 vivado_project_file = $(FPGA_BUILD)/$(VIVADO_PROJECT)/$(VIVADO_PROJECT).xpr
 fpga_project: fpga_verilog | $(vivado_project_file)
 $(vivado_project_file): 
-	$(shell sed -i 's/CONFIG.PRIM_SOURCE.*/''CONFIG.PRIM_SOURCE {$(clktype)} \\''/g' $(FPGA)/rocket32_soc/script/make_project.tcl)
-	$(shell sed -i 's/CONFIG.PRIM_IN_FREQ.*/''CONFIG.PRIM_IN_FREQ {$(inclock)} \\''/g' $(FPGA)/rocket32_soc/script/make_project.tcl)
-	$(shell sed -i 's/set_property verilog_define.*/''set_property verilog_define \[list FPGA $(clktype)\] \[get_filesets sources_1\] ''/g' $(FPGA)/rocket32_soc/script/make_project.tcl)
-	$(VIVADO) -mode batch -source $(FPGA)/rocket32_soc/script/make_project.tcl -tclargs $(VIVADO_PROJECT) $(FPGA) $(FPGA_BUILD) $(BOARD) $(part)  
-
-vivado: $(vivado_project_file)
-	$(VIVADO) $(vivado_project_file) &
+	$(shell sed -i 's/CONFIG.PRIM_SOURCE.*/''CONFIG.PRIM_SOURCE {$(clktype)} \\''/g' $(FPGA)/soc/$(SOC)/script/make_project.tcl)
+	$(shell sed -i 's/CONFIG.PRIM_IN_FREQ.*/''CONFIG.PRIM_IN_FREQ {$(inclock)} \\''/g' $(FPGA)/soc/$(SOC)/script/make_project.tcl)
+	$(shell sed -i 's/set_property verilog_define.*/''set_property verilog_define \[list FPGA $(clktype)\] \[get_filesets sources_1\] ''/g' $(FPGA)/soc/$(SOC)/script/make_project.tcl)
+	$(VIVADO) -mode batch -source $(FPGA)/soc/$(SOC)/script/make_project.tcl -tclargs $(VIVADO_PROJECT) $(FPGA) $(FPGA_BUILD) $(BOARD) $(part)  
 
 bitstream = $(FPGA_BUILD)/$(VIVADO_PROJECT)/$(VIVADO_PROJECT).runs/impl_1/system_top_wrapper.bit
-bitstream: $(FPGA_BUILD)/$(VIVADO_PROJECT)/prog.mmi
-$(bitstream): $(rtl_sources) | $(vivado_project_file)
+bitstream: $(bitstream) 
+$(bitstream): $(rtl_sources)  $(vivado_project_file)
 	$(VIVADO) -mode batch -source $(FPGA)/script/make_bitstream.tcl -tclargs $(VIVADO_PROJECT) $(FPGA_BUILD)
 
 program: $(bitstream)
 	$(VIVADO) -mode batch -source $(FPGA)/script/program.tcl -tclargs $(device) $(bitstream)
 
-.PHONY: project vivado bitstream program
+
+vivado: $(vivado_project_file)
+	$(VIVADO) $(vivado_project_file) &
+
+.PHONY: fpga_project bitstream program vivado 
 
 #--------------------------------------------------------------------
 # Debug helper
@@ -105,11 +106,11 @@ $(FPGA_BUILD)/$(VIVADO_PROJECT)/prog.mmi: $(bitstream)
 	python $(FPGA)/script/mmi_gen.py $(FPGA_BUILD)/$(VIVADO_PROJECT)/search-ramb.info $(FPGA_BUILD)/$(VIVADO_PROJECT)/prog.mmi 32 32768 $(part)
 
 bit-update: $(FPGA_BUILD)/$(VIVADO_PROJECT)/$(VIVADO_PROJECT).runs/impl_1/system_top_wrapper.new.bit
-$(FPGA_BUILD)/$(VIVADO_PROJECT)/$(VIVADO_PROJECT).runs/impl_1/system_top_wrapper.new.bit: $(prog_mem) $(FPGA_BUILD)/$(VIVADO_PROJECT)/prog.mmi
+$(FPGA_BUILD)/$(VIVADO_PROJECT)/$(VIVADO_PROJECT).runs/impl_1/system_top_wrapper.new.bit: $(bitstream) $(prog_mem) $(FPGA_BUILD)/$(VIVADO_PROJECT)/prog.mmi
 	$(UPDMEM) -force -meminfo $(FPGA_BUILD)/$(VIVADO_PROJECT)/prog.mmi -data $(prog_mem) -bit $(bitstream) -proc dummy -out $@
 
 program-updated: $(FPGA_BUILD)/$(VIVADO_PROJECT)/$(VIVADO_PROJECT).runs/impl_1/system_top_wrapper.new.bit
 	$(VIVADO) -mode batch -source $(FPGA)/script/program.tcl -tclargs $(device) $(FPGA_BUILD)/$(VIVADO_PROJECT)/$(VIVADO_PROJECT).runs/impl_1/system_top_wrapper.new.bit
 
-.PHONY: search-ramb bit-update program-updated
+.PHONY: bit-update program-updated
 
