--- a/src/hardware/rtl/rv64/Makefile.in
+++ b/src/hardware/rtl/rv64/Makefile.in
@@ -1,4 +1,3 @@
-
 # Copyright (C) 2021 SCARV project <info@scarv.org>
 #
 # Use of this source code is restricted per the MIT license, a copy of which 
@@ -13,13 +12,19 @@ endif
 # Sources
 #--------------------------------------------------------------------
 RTL64 = $(REPO_HOME)/src/hardware/rtl/rv64
-rtl64_src = \
-        $(REPO_HOME)/src/hardware/rtl/rv64/cop_ise.v \
-        $(REPO_HOME)/src/hardware/rtl/rv64/xalu_ise.v \
-        $(REPO_HOME)/src/hardware/rtl/rv64/rv64b_ise.v \
-        $(REPO_HOME)/src/hardware/rtl/rv64/rv64ell_ise.v \
-        $(REPO_HOME)/src/hardware/rtl/rv64/alzette_ise_v2.v \
-        $(REPO_HOME)/src/hardware/rtl/rv64/alzette_ise_v3.v \
-        $(REPO_HOME)/src/hardware/rtl/rv64/alzette_ise_v4.v \
-        $(REPO_HOME)/src/hardware/rtl/rv64/alzette_ise_v5.v  
+rtl64_ise_src= \
+        $(RTL64)/rv64b_ise.v \
+        $(RTL64)/rv64ell_ise.v \
+        $(RTL64)/alzette_ise_v2.v \
+        $(RTL64)/alzette_ise_v3.v \
+        $(RTL64)/alzette_ise_v4.v \
+        $(RTL64)/alzette_ise_v5.v  
+
+rtl64_cop_src = $(RTL64)/cop_ise.v 
+rtl64_xalu_src= $(RTL64)/xalu_ise.v 
+
+rtl64_src= \
+        $(rtl64_ise_src) \
+        $(rtl64_cop_src) \
+        $(rtl64_xalu_src) 
 
