Update Makefile.in files for FPGA implemenations

--- a/src/hardware/fpga/soc/rv64-rocket/Makefile.in
+++ b/src/hardware/fpga/soc/rv64-rocket/Makefile.in
@@ -4,32 +4,14 @@
 # can be found at https://opensource.org/licenses/MIT (or should be included 
 # as LICENSE.txt within the associated archive or repository).
 
-ifndef REPO_HOME
-  $(error "execute 'source ./bin/conf.sh' to configure environment")
-endif
-
 ROCKET          = freechips.rocketchip.system
 FPGAMODEL       = SCARVRocketFPGASystem
 COP_FPGACONFIG  = SCARVRocketFPGACoPConf64
 XALU_FPGACONFIG = SCARVRocketFPGAXALUConf64
 
-#--------------------------------------------------------------------
-# Sources
-#--------------------------------------------------------------------
-rocketchip_support_src = \
-    $(ROCKETCHIP_REPO)/src/main/resources/vsrc/plusarg_reader.v \
-    $(ROCKETCHIP_REPO)/src/main/resources/vsrc/EICG_wrapper.v
-
-rocketchip_cop_ram_src =\
-    $(ROCKETCHIP_REPO)/vsim/generated-src/$(ROCKET).$(COP_FPGACONFIG).behav_srams.v
-
-rocketchip_xalu_ram_src =\
-    $(ROCKETCHIP_REPO)/vsim/generated-src/$(ROCKET).$(XALU_FPGACONFIG).behav_srams.v
-
-rtl_sources = $(widecard $(FPGA_BUILD)/$(VIVADO_PROJECT)/rtl_sources/*.v)
 
 #--------------------------------------------------------------------
-# Build Verilog
+# Build Rocket-Chip Verilog
 #--------------------------------------------------------------------
 fpga-rocketchip-cop-verilog = $(ROCKETCHIP_REPO)/vsim/generated-src/$(ROCKET).$(COP_FPGACONFIG).v
 $(fpga-rocketchip-cop-verilog) : 
@@ -61,34 +43,6 @@ xalu_verilog: $(fpga-rocketchip-xalu-verilog) $(FPGA)/soc/$(SOC)/system_top_wrap
 	cp -f $(rtl64_xalu_src)                         $(FPGA_BUILD)/$(VIVADO_PROJECT)/rtl_sources/
 	cp -f $(rtl64_ise_src)                          $(FPGA_BUILD)/$(VIVADO_PROJECT)/rtl_sources/
 
-fpga_verilog: $(ISE)_verilog
-
-.PHONY: fpga_verilog
-
-#--------------------------------------------------------------------
-# Project generation
-#--------------------------------------------------------------------
-vivado_project_file = $(FPGA_BUILD)/$(VIVADO_PROJECT)/$(VIVADO_PROJECT).xpr
-fpga_project: fpga_verilog | $(vivado_project_file)
-$(vivado_project_file): 
-	$(shell sed -i 's/CONFIG.PRIM_SOURCE.*/''CONFIG.PRIM_SOURCE {$(clktype)} \\''/g' $(FPGA)/soc/$(SOC)/script/make_project.tcl)
-	$(shell sed -i 's/CONFIG.PRIM_IN_FREQ.*/''CONFIG.PRIM_IN_FREQ {$(inclock)} \\''/g' $(FPGA)/soc/$(SOC)/script/make_project.tcl)
-	$(shell sed -i 's/set_property verilog_define.*/''set_property verilog_define \[list FPGA $(clktype)\] \[get_filesets sources_1\] ''/g' $(FPGA)/soc/$(SOC)/script/make_project.tcl)
-	$(VIVADO) -mode batch -source $(FPGA)/soc/$(SOC)/script/make_project.tcl -tclargs $(VIVADO_PROJECT) $(FPGA) $(FPGA_BUILD) $(BOARD) $(part)  
-
-bitstream = $(FPGA_BUILD)/$(VIVADO_PROJECT)/$(VIVADO_PROJECT).runs/impl_1/system_top_wrapper.bit
-bitstream: $(bitstream) 
-$(bitstream): $(rtl_sources)  $(vivado_project_file)
-	$(VIVADO) -mode batch -source $(FPGA)/script/make_bitstream.tcl -tclargs $(VIVADO_PROJECT) $(FPGA_BUILD)
-
-program: $(bitstream)
-	$(VIVADO) -mode batch -source $(FPGA)/script/program.tcl -tclargs $(device) $(bitstream)
-
-vivado: $(vivado_project_file)
-	$(VIVADO) $(vivado_project_file) &
-
-.PHONY: fpga_project bitstream program vivado 
-
 #--------------------------------------------------------------------
 # Update Program helper
 #--------------------------------------------------------------------
@@ -97,11 +51,4 @@ $(FPGA_BUILD)/$(VIVADO_PROJECT)/prog.mmi: $(bitstream)
 	$(VIVADO) -mode batch -source $(FPGA)/script/search_ramb.tcl -tclargs $(VIVADO_PROJECT) $(FPGA_BUILD) > $(FPGA_BUILD)/$(VIVADO_PROJECT)/search-ramb.info
 	python $(FPGA)/script/mmi_gen.py $(FPGA_BUILD)/$(VIVADO_PROJECT)/search-ramb.info $(FPGA_BUILD)/$(VIVADO_PROJECT)/prog.mmi 64 32768 $(part)
 
-bit-update: $(FPGA_BUILD)/$(VIVADO_PROJECT)/$(VIVADO_PROJECT).runs/impl_1/system_top_wrapper.new.bit
-$(FPGA_BUILD)/$(VIVADO_PROJECT)/$(VIVADO_PROJECT).runs/impl_1/system_top_wrapper.new.bit: $(bitstream) $(prog_mem) $(FPGA_BUILD)/$(VIVADO_PROJECT)/prog.mmi
-	$(UPDMEM) -force -meminfo $(FPGA_BUILD)/$(VIVADO_PROJECT)/prog.mmi -data $(prog_mem) -bit $(bitstream) -proc dummy -out $@
 
-program-updated: $(FPGA_BUILD)/$(VIVADO_PROJECT)/$(VIVADO_PROJECT).runs/impl_1/system_top_wrapper.new.bit
-	$(VIVADO) -mode batch -source $(FPGA)/script/program.tcl -tclargs $(device) $(FPGA_BUILD)/$(VIVADO_PROJECT)/$(VIVADO_PROJECT).runs/impl_1/system_top_wrapper.new.bit
-
-.PHONY: bit-update program-updated
