--- a/src/hardware/fpga/soc/rv32-rocket/bootrom/Makefile
+++ b/src/hardware/fpga/soc/rv32-rocket/bootrom/Makefile
@@ -13,10 +13,10 @@ all: $(bootrom_img) $(bootrom_hex) $(bootrom_dum)
 %.dum: %.elf
 	$(OBJDUMP) -Dt $< > $@
 %.img: %.bin
-	dd if=$< of=$@ bs=128 count=1
+	dd if=$< of=$@ bs=2048 count=1
 
 %.bin: %.elf
 	$(OBJCOPY) -O binary $< $@
 
-%.elf: %.S linker.ld
-	$(GCC) -Tlinker.ld $< -nostdlib -static -Wl,--no-gc-sections -o $@
+%.elf : %.S bootloader.c linker.ld
+	$(GCC) -march=rv32imc -mabi=ilp32 -Tlinker.ld $< bootloader.c -nostdlib -static -Wl,--no-gc-sections -o $@
