--- a/src/hardware/Makefile
+++ b/src/hardware/Makefile
@@ -20,12 +20,11 @@ ifndef ROCKETCHIP_REPO
   $(error "set ROCKETCHIP_REPO environment variable to point at the Rocket Chip reposistory")
 endif
 
-export ALG  ?= alzette
-
+export PORT ?= /dev/ttyUSB0
+export ALG  ?= sparkle
 export ARCH ?= rv32
 export IMP  ?= rv32
-export ISE  ?= cop
-export CONF ?=
+export ISE  ?= xalu
 
 # =============================================================================
 include ${REPO_HOME}/src/hardware/fpga/Makefile.in
@@ -34,37 +33,4 @@ include ${REPO_HOME}/src/hardware/verilator/Makefile.in
 include ${REPO_HOME}/src/hardware/yosys_synth/Makefile.in
 # =============================================================================
 
-export EMU_HAL  = ${REPO_HOME}/src/hardware/verilator/hal
-export SOFTWARE = ${REPO_HOME}/src/software
-export INCLUDES = ${SOFTWARE}/share ${SOFTWARE}/share/arch/${ARCH} ${SOFTWARE}/${ALG} ${SOFTWARE}/${ALG}/arch/${ARCH} ${SOFTWARE}/${ALG}/imp/${IMP} ${EMU_HAL}
 
-export SOURCES  = $(wildcard $(addsuffix /*.c, ${INCLUDES}))
-export SOURCES += $(wildcard $(addsuffix /*.S, ${INCLUDES}))
-export HEADERS  = $(wildcard $(addsuffix /*.h, ${INCLUDES}))
-
-MABI       = $(findstring i,$(ARCH:rv32=i))lp$(ARCH:rv%=%)
-GCC_FLAGS  = -march=$(ARCH)imac -mabi=$(MABI)  -DPREALLOCATE=1 -mcmodel=medany
-GCC_FLAGS += -fno-builtin-printf -static -nostartfiles -T  $(EMU_HAL)/test.ld
-GCC_PREFIX = ${RISCV_ROCKET}/bin/riscv64-unknown-elf
-
-export TARGET   = ${REPO_HOME}/build/driver_emu
-# -----------------------------------------------------------------------------
-
-${TARGET}.elf : ${SOURCES} ${HEADERS}
-	${GCC_PREFIX}-gcc ${CONF} ${GCC_FLAGS} ${GCC_PATHS} $(addprefix -I ,${INCLUDES}) -std='gnu99' -O2 -o ${@} $(filter %.c, ${^}) $(filter %.S, ${^}) ${GCC_LIBS}
-
-${TARGET}.asm : ${TARGET}.elf
-	${GCC_PREFIX}-objdump --disassemble-all ${<} > ${@}
-
-emulate: ${EMULATOR} ${TARGET}.elf
-	${EMULATOR} -c -m 2100000 ${TARGET}.elf
-emulate-debug : ${EMULATOR} ${TARGET}.elf
-	${EMULATOR} -c -x 700000 -v ${REPO_HOME}/build/emu32_eval.vcd -m 2100000 ${<}
-
-all   : ${TARGET}.elf ${TARGET}.asm
-
-clean : 
-	@rm --force ${TARGET}.elf
-	@rm --force ${TARGET}.asm
-
-# =============================================================================
