Update rv32-rocket soc and embbed a bootloader into the bootroom

--- a/src/hardware/fpga/soc/rv32-rocket/bootrom/Makefile
+++ b/src/hardware/fpga/soc/rv32-rocket/bootrom/Makefile
@@ -1,15 +1,12 @@
 bootrom_img = bootrom.img
-bootrom_hex = bootrom.hex
 bootrom_dum = bootrom.dum
 
 GCC=$(RISCV)/bin/riscv64-unknown-elf-gcc
 OBJCOPY=$(RISCV)/bin/riscv64-unknown-elf-objcopy
 OBJDUMP=$(RISCV)/bin/riscv64-unknown-elf-objdump
 
-all: $(bootrom_img) $(bootrom_hex) $(bootrom_dum) 
+all: $(bootrom_img) $(bootrom_dum) 
 
-%.hex: %.bin
-	od -t x4 -An -w4 -v $< > $@	
 %.dum: %.elf
 	$(OBJDUMP) -Dt $< > $@
 %.img: %.bin
